fix bug: missing background for Read_more on taxonomy pages

--- a/cms_frontend/css/aewa.css
+++ b/cms_frontend/css/aewa.css
@@ -166,7 +166,8 @@ color: #47C7E9;
 .view-front-end-working-groups .node-readmore,
 .view-front-end-campaigns .node-readmore,
 .view-front-end-awards .node-readmore,
-.page-search-site .facetapi-limit-link {
+.page-search-site .facetapi-limit-link,
+.page-taxonomy .node-teaser .node-readmore {
 background: #ffdcaa;
 }
 
