--- a/cms_frontend/css/eurobats.css
+++ b/cms_frontend/css/eurobats.css
@@ -157,7 +157,8 @@ color: #037CC1;
 .view-front-end-working-groups .node-readmore,
 .view-front-end-campaigns .node-readmore,
 .view-front-end-awards .node-readmore,
-.page-search-site .facetapi-limit-link {
+.page-search-site .facetapi-limit-link,
+.page-taxonomy .node-teaser .node-readmore {
 background: #d6bcaa;
 }
 
